[gd_scene load_steps=14 format=4 uid="uid://c1tr7hopufarw"]

[ext_resource type="Script" uid="uid://b4ol1qy6as4us" path="res://World/throne_room_hall.gd" id="1_tbdse"]
[ext_resource type="PackedScene" uid="uid://c23uva3n3te25" path="res://UI/health_canvas_layer.tscn" id="2_tbdse"]
[ext_resource type="PackedScene" uid="uid://4tgk781ue0k4" path="res://World/tile_map_layer.tscn" id="3_mfbqk"]
[ext_resource type="TileSet" uid="uid://clqyi38aahe5d" path="res://World/throne_room.tres" id="4_uno22"]
[ext_resource type="PackedScene" uid="uid://sx4vdntx8vld" path="res://Components/debug_manager.tscn" id="5_gjgge"]
[ext_resource type="PackedScene" uid="uid://cqv7hf2dkuljw" path="res://Dialogue/dialogue_room_manager.tscn" id="6_8nlf4"]
[ext_resource type="Resource" uid="uid://poskps7oupo8" path="res://Dialogue/Literal Dialogue/throne_room.dialogue" id="7_tbdse"]
[ext_resource type="PackedScene" uid="uid://l10kiwsexaab" path="res://Combat/combat_manager.tscn" id="8_2p25j"]
[ext_resource type="PackedScene" uid="uid://cgnrs4ebb1dfe" path="res://World/pathfinding_manager.tscn" id="9_sbf70"]
[ext_resource type="PackedScene" uid="uid://bixth4v8wdly8" path="res://NPCs/princess.tscn" id="10_qe67c"]
[ext_resource type="PackedScene" uid="uid://cblilm1d3bree" path="res://World/transition_area.tscn" id="11_p4qld"]
[ext_resource type="PackedScene" uid="uid://bursypx5unela" path="res://Player/player.tscn" id="11_uphcm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tbdse"]
size = Vector2(64, 8)

[node name="ThroneRoomHall" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_tbdse")

[node name="HealthCanvasLayer" parent="." instance=ExtResource("2_tbdse")]

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="TileMapLayer" parent="." instance=ExtResource("3_mfbqk")]
tile_map_data = PackedByteArray("AAAAAAAAAQACAAIAAAAAAAEAAQACAAIAAAAAAAIAAQACAAIAAAAAAAMAAQACAAIAAAAAAAQAAQACAAIAAAAAAAUAAQACAAIAAAAAAAYAAQACAAIAAAAAAAcAAQACAAIAAAAAAAgAAQACAAIAAAAAAAkAAQACAAIAAAAAAAoAAQACAAIAAAAAAAsAAQACAAIAAAAAAAwAAQACAAIAAAAAAA0AAQACAAIAAAAAAA4AAQACAAIAAAABAA4AAQACAAIAAAACAA4AAQACAAIAAAADAA4AAQACAAIAAAAEAA4AAQABAAUAAAAFAA4AAQACAAUAAAAGAA4AAQACAAUAAAAHAA4AAQACAAUAAAAIAA4AAQACAAUAAAAJAA4AAQACAAUAAAAKAA4AAQACAAUAAAALAA4AAQACAAUAAAAMAA4AAQACAAUAAAANAA4AAQACAAUAAAAOAA4AAQACAAUAAAAPAA4AAQADAAUAAAAQAA4AAQACAAIAAAARAA4AAQACAAIAAAASAA4AAQACAAIAAAATAA4AAQACAAIAAAATAAAAAQACAAIAAAATAAEAAQACAAIAAAATAAIAAQACAAIAAAATAAMAAQACAAIAAAATAAQAAQACAAIAAAATAAUAAQACAAIAAAATAAYAAQACAAIAAAATAAcAAQACAAIAAAATAAgAAQACAAIAAAATAAkAAQACAAIAAAATAAoAAQACAAIAAAATAAsAAQACAAIAAAATAAwAAQACAAIAAAATAA0AAQACAAIAAAABAAAAAQACAAIAAAACAAAAAQACAAIAAAADAAAAAQACAAIAAAAEAAAAAQADAAAAAAAFAAAAAQADAAAAAAAGAAAAAQADAAAAAAAHAAAAAQADAAAAAAAIAAAAAQABAAUAAAAJAAAAAQACAAUAAAAKAAAAAQACAAUAAAALAAAAAQADAAUAAAAMAAAAAQADAAAAAAANAAAAAQACAAEAAAAOAAAAAQADAAAAAAAPAAAAAQADAAAAAAAQAAAAAQACAAIAAAARAAAAAQACAAIAAAASAAAAAQACAAIAAAABAAEAAQACAAIAAAABAAIAAQACAAIAAAABAAMAAQACAAIAAAABAAQAAQACAAIAAAABAAUAAQACAAIAAAABAAYAAQACAAIAAAABAAcAAQACAAIAAAABAAgAAQACAAIAAAABAAkAAQACAAIAAAABAAoAAQACAAIAAAABAAsAAQACAAIAAAABAAwAAQACAAIAAAABAA0AAQACAAIAAAACAAEAAQACAAIAAAACAAIAAQACAAIAAAACAAMAAQACAAIAAAACAAQAAQACAAIAAAACAAUAAQACAAIAAAACAAYAAQACAAIAAAACAAcAAQACAAIAAAACAAgAAQACAAIAAAACAAkAAQACAAIAAAACAAoAAQACAAIAAAACAAsAAQACAAIAAAACAAwAAQACAAIAAAACAA0AAQACAAIAAAADAAEAAQACAAIAAAADAAIAAQACAAIAAAADAAMAAQACAAIAAAADAAQAAQACAAIAAAADAAUAAQACAAIAAAADAAYAAQACAAIAAAADAAcAAQACAAIAAAADAAgAAQACAAIAAAADAAkAAQACAAIAAAADAAoAAQACAAIAAAADAAsAAQACAAIAAAADAAwAAQACAAIAAAADAA0AAQACAAIAAAAEAAEAAQADAAAAAAAEAAIAAQADAAAAAAAEAAMAAQADAAAAAAAEAAQAAQADAAAAAAAEAAUAAQADAAAAAAAEAAYAAQADAAAAAAAEAAcAAQADAAAAAAAEAAgAAQADAAAAAAAEAAkAAQABAAQAAAAEAAoAAQABAAUAAAAEAAsAAQABAAUAAAAEAAwAAQABAAUAAAAEAA0AAQABAAUAAAAFAAEAAQADAAAAAAAFAAIAAQACAAEAAAAFAAMAAQADAAAAAAAFAAQAAQADAAAAAAAFAAUAAQADAAAAAAAFAAYAAQABAAEAAAAFAAcAAQADAAAAAAAFAAgAAQADAAAAAAAFAAkAAQACAAQAAAAFAAoAAQACAAUAAAAFAAsAAQACAAUAAAAFAAwAAQACAAUAAAAFAA0AAQACAAUAAAAGAAEAAQADAAAAAAAGAAIAAQADAAAAAAAGAAMAAQADAAAAAAAGAAQAAQADAAAAAAAGAAUAAQADAAAAAAAGAAYAAQADAAAAAAAGAAcAAQADAAAAAAAGAAgAAQADAAAAAAAGAAkAAQACAAQAAAAGAAoAAQACAAUAAAAGAAsAAQACAAUAAAAGAAwAAQACAAUAAAAGAA0AAQACAAUAAAAHAAEAAQADAAAAAAAHAAIAAQADAAAAAAAHAAMAAQADAAAAAAAHAAQAAQADAAAAAAAHAAUAAQACAAEAAAAHAAYAAQADAAAAAAAHAAcAAQADAAAAAAAHAAgAAQADAAAAAAAHAAkAAQACAAQAAAAHAAoAAQACAAUAAAAHAAsAAQACAAUAAAAHAAwAAQACAAUAAAAHAA0AAQACAAUAAAAIAAEAAQABAAUAAAAIAAIAAQABAAUAAAAIAAMAAQABAAUAAAAIAAQAAQABAAUAAAAIAAUAAQABAAUAAAAIAAYAAQABAAUAAAAIAAcAAQABAAUAAAAIAAgAAQABAAUAAAAIAAkAAQAHAAYAAAAIAAoAAQACAAUAAAAIAAsAAQACAAUAAAAIAAwAAQACAAUAAAAIAA0AAQACAAUAAAAJAAEAAQACAAUAAAAJAAIAAQACAAUAAAAJAAMAAQACAAUAAAAJAAQAAQACAAUAAAAJAAUAAQACAAUAAAAJAAYAAQACAAUAAAAJAAcAAQACAAUAAAAJAAgAAQACAAUAAAAJAAkAAQACAAUAAAAJAAoAAQACAAUAAAAJAAsAAQACAAUAAAAJAAwAAQACAAUAAAAJAA0AAQACAAUAAAAKAAEAAQACAAUAAAAKAAIAAQACAAUAAAAKAAMAAQACAAUAAAAKAAQAAQACAAUAAAAKAAUAAQACAAUAAAAKAAYAAQACAAUAAAAKAAcAAQACAAUAAAAKAAgAAQACAAUAAAAKAAkAAQACAAUAAAAKAAoAAQACAAUAAAAKAAsAAQACAAUAAAAKAAwAAQACAAUAAAAKAA0AAQACAAUAAAALAAEAAQADAAUAAAALAAIAAQADAAUAAAALAAMAAQADAAUAAAALAAQAAQADAAUAAAALAAUAAQADAAUAAAALAAYAAQADAAUAAAALAAcAAQADAAUAAAALAAgAAQADAAUAAAALAAkAAQAGAAYAAAALAAoAAQACAAUAAAALAAsAAQACAAUAAAALAAwAAQACAAUAAAALAA0AAQACAAUAAAAMAAEAAQADAAAAAAAMAAIAAQADAAAAAAAMAAMAAQADAAAAAAAMAAQAAQADAAAAAAAMAAUAAQADAAAAAAAMAAYAAQADAAAAAAAMAAcAAQADAAAAAAAMAAgAAQADAAAAAAAMAAkAAQACAAQAAAAMAAoAAQACAAUAAAAMAAsAAQACAAUAAAAMAAwAAQACAAUAAAAMAA0AAQACAAUAAAANAAEAAQADAAAAAAANAAIAAQADAAAAAAANAAMAAQADAAAAAAANAAQAAQADAAAAAAANAAUAAQADAAAAAAANAAYAAQADAAAAAAANAAcAAQADAAAAAAANAAgAAQADAAAAAAANAAkAAQACAAQAAAANAAoAAQACAAUAAAANAAsAAQACAAUAAAANAAwAAQACAAUAAAANAA0AAQACAAUAAAAOAAEAAQADAAAAAAAOAAIAAQADAAAAAAAOAAMAAQADAAAAAAAOAAQAAQADAAAAAAAOAAUAAQADAAAAAAAOAAYAAQABAAEAAAAOAAcAAQADAAAAAAAOAAgAAQADAAAAAAAOAAkAAQACAAQAAAAOAAoAAQACAAUAAAAOAAsAAQACAAUAAAAOAAwAAQACAAUAAAAOAA0AAQACAAUAAAAPAAEAAQADAAAAAAAPAAIAAQADAAAAAAAPAAMAAQADAAAAAAAPAAQAAQACAAEAAAAPAAUAAQADAAAAAAAPAAYAAQADAAAAAAAPAAcAAQADAAAAAAAPAAgAAQADAAAAAAAPAAkAAQADAAQAAAAPAAoAAQADAAUAAAAPAAsAAQADAAUAAAAPAAwAAQADAAUAAAAPAA0AAQADAAUAAAAQAAEAAQACAAIAAAAQAAIAAQACAAIAAAAQAAMAAQACAAIAAAAQAAQAAQACAAIAAAAQAAUAAQACAAIAAAAQAAYAAQACAAIAAAAQAAcAAQACAAIAAAAQAAgAAQACAAIAAAAQAAkAAQACAAIAAAAQAAoAAQACAAIAAAAQAAsAAQACAAIAAAAQAAwAAQACAAIAAAAQAA0AAQACAAIAAAARAAEAAQACAAIAAAARAAIAAQACAAIAAAARAAMAAQACAAIAAAARAAQAAQACAAIAAAARAAUAAQACAAIAAAARAAYAAQACAAIAAAARAAcAAQACAAIAAAARAAgAAQACAAIAAAARAAkAAQACAAIAAAARAAoAAQACAAIAAAARAAsAAQACAAIAAAARAAwAAQACAAIAAAARAA0AAQACAAIAAAASAAEAAQACAAIAAAASAAIAAQACAAIAAAASAAMAAQACAAIAAAASAAQAAQACAAIAAAASAAUAAQACAAIAAAASAAYAAQACAAIAAAASAAcAAQACAAIAAAASAAgAAQACAAIAAAASAAkAAQACAAIAAAASAAoAAQACAAIAAAASAAsAAQACAAIAAAASAAwAAQACAAIAAAASAA0AAQACAAIAAAAAAP//AQACAAIAAAABAP//AQACAAIAAAACAP//AQACAAIAAAADAP//AQACAAIAAAAEAP//AQACAAIAAAAFAP//AQACAAIAAAAGAP//AQACAAIAAAAHAP//AQACAAIAAAAIAP//AQACAAIAAAAJAP//AQACAAIAAAAKAP//AQACAAIAAAALAP//AQACAAIAAAAMAP//AQACAAIAAAANAP//AQACAAIAAAAOAP//AQACAAIAAAAPAP//AQACAAIAAAAQAP//AQACAAIAAAARAP//AQACAAIAAAASAP//AQACAAIAAAATAP//AQACAAIAAAAAAA8AAQACAAIAAAABAA8AAQACAAIAAAACAA8AAQACAAIAAAADAA8AAQACAAIAAAAEAA8AAQACAAIAAAAFAA8AAQACAAIAAAAGAA8AAQACAAIAAAAHAA8AAQACAAIAAAAIAA8AAQACAAIAAAAJAA8AAQACAAIAAAAKAA8AAQACAAIAAAALAA8AAQACAAIAAAAMAA8AAQACAAIAAAANAA8AAQACAAIAAAAOAA8AAQACAAIAAAAPAA8AAQACAAIAAAAQAA8AAQACAAIAAAARAA8AAQACAAIAAAASAA8AAQACAAIAAAATAA8AAQACAAIAAAA=")
tile_set = ExtResource("4_uno22")

[node name="DebugManager" parent="." instance=ExtResource("5_gjgge")]

[node name="DialogueRoomManager" parent="." instance=ExtResource("6_8nlf4")]
dialogueResource = ExtResource("7_tbdse")

[node name="CombatManager" parent="." instance=ExtResource("8_2p25j")]

[node name="PathfindingManager" parent="." instance=ExtResource("9_sbf70")]

[node name="Princess" parent="." instance=ExtResource("10_qe67c")]
position = Vector2(160, 232)

[node name="Player" parent="." instance=ExtResource("11_uphcm")]
position = Vector2(160, 232)

[node name="TransitionArea" parent="." instance=ExtResource("11_p4qld")]
position = Vector2(160, 0)
rotation = 3.14159

[node name="CollisionShape2D" parent="TransitionArea" index="0"]
position = Vector2(1.52588e-05, -4)
shape = SubResource("RectangleShape2D_tbdse")

[node name="Respawn" type="Marker2D" parent="."]
position = Vector2(160, 32)

[connection signal="body_entered" from="TransitionArea" to="." method="_on_transition_area_body_entered"]

[editable path="TransitionArea"]
